--- a/k8s/k8s-deployment.yaml
+++ b/k8s/k8s-deployment.yaml
@@ -36,6 +36,13 @@ spec:
       containers:
       - name: stubby4node
         image: tpsumeta/stubby4node:amd64
+        resources:
+          requests:
+            cpu: 50m
+            memory: 128Mi
+          limits:
+            cpu: 100m
+            memory: 256Mi
         env:
           - name: YAML_CONFIG
             value: "main.yaml"
